# QuakeMigrate

./: .git-message-template  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  CHANGES.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  QuakeMigrate.yml  README.md  codecov.yml  environment.yml  optional-requirements.txt  pyproject.toml  quakemigrate.yml  requirements.txt  setup.cfg  setup.py
.binder/: environment.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml  run_tests.yml
Examples/: Iceqauke.ipynb  Iceqauke.py  Icequake.ipynb  Icequake.py
QMigrate/: __init__.py  util.py
QMigrate/core/: .model_old.py.swp  QMigratelib.py  __init__.py  lib.py  libnames.py  model.py
QMigrate/export/: __init__.py  to_nlloc.py
QMigrate/io/: __init__.py  amplitudes.py  availability.py  core.py  cut_waveforms.py  data.py  event.py  export.py  mseed.py  obspy_catalog.py  quakeML.py  quakeio.py  scanmseed.py  to_mfast.py  to_obspy.py  to_snuffler.py  triggered_events.py
QMigrate/lut/: __init__.py  create_lut.py  lut.py
QMigrate/plot/: __init__.py  amplitudes.py  event.py  phase_picks.py  quakeplot.py  trigger.py  triggered_events.py
QMigrate/signal/: __init__.py  magnitude.py  magnitude_final.py  magnitudes.py  scan.py  scatch.py  trigger.py
docs/: conf.py  index.rst  installation.rst  interfaces.rst  references.rst  requirements.txt  sourcecode.rst  tutorials.rst
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  references.rst  sourcecode.rst  tutorials.rst
docs/submodules/: QMigrate.core.rst  QMigrate.export.rst  QMigrate.io.rst  QMigrate.lut.rst  QMigrate.plot.rst  QMigrate.signal.local_mag.rst  QMigrate.signal.onset.rst  QMigrate.signal.pick.rst  QMigrate.signal.rst  QMigrate.util.rst  quakemigrate.core.rst  quakemigrate.export.rst  quakemigrate.io.rst  quakemigrate.lut.rst  quakemigrate.plot.rst  quakemigrate.signal.local_mag.rst  quakemigrate.signal.onset.rst  quakemigrate.signal.onsets.rst  quakemigrate.signal.pick.rst  quakemigrate.signal.pickers.rst  quakemigrate.signal.rst  quakemigrate.util.rst
docs/tutorials/: archive.rst  detect.rst  locate.rst  lut.rst  synthetic.rst  trigger.rst
example_running_scripts/: Detect.py  Trigger.py  create_lut.py  detect.py  locate.py  make_LUT.py  make_lut.py  trigger.py
examples/Askja_Iceland_VT-DLP/: askja_detect.py  askja_locate.py  askja_lut.py  askja_trigger.py  get_askja_data.py
examples/Icequake_Iceland/: get_iceland_icequake_data.py  iceland_detect.py  iceland_locate.py  iceland_lut.py  iceland_trigger.py  icequakes_iceland.ipynb  icequakes_iceland.py
examples/Icequake_Rutford/: Rutford_Ice_Stream_icequake.py  get_rutford_data.py  icequakes_rutford.ipynb  icequakes_rutford.py  rutford_detect.py  rutford_locate.py  rutford_lut.py  rutford_trigger.py
examples/Volcanotectonic_Iceland/: dike_intrusion_detect.py  dike_intrusion_locate.py  dike_intrusion_lut.py  dike_intrusion_trigger.py  get_dike_intrusion_data.py
examples/ethiopia_swarm/: 1_build_lut.py  (+4 more)
quakemigrate/: __init__.py  cli.py  util.py
scripts/: moment_magnitude.py
tests/: run_test_examples.py  test_benchmarks.py  test_import.py  test_onsets.py  test_trigger.py  test_util.py
(+437 files in other folders)
