[build-system]
# Minimum requirements for the build system to execute.
# see PEP518: https://www.python.org/dev/peps/pep-0518/
requires = [
    "setuptools",
    "numpy",
    ]
build-backend = "setuptools.build_meta"
[tool.cibuildwheel.macos]
before-all = [
    "conda install openmp -c conda-forge"
]
